--- a/HomeManager/View/ToDo/ucTodoPopup.xaml
+++ b/HomeManager/View/ToDo/ucTodoPopup.xaml
@@ -127,13 +127,14 @@
                     Grid.Column="3"
                     Orientation="Horizontal">
                     <ComboBox
+                        Name="GebruikersCBO"
                         Width="125"
                         Height="20"
                         Margin="0,0,4,0"
                         VerticalAlignment="Center"
                         ItemsSource="{Binding MijnCollectieGebruikers}"
-                        SelectedValue="{Binding MijnSelectedGebruiker.AccountID}"
-                        SelectedValuePath="PersoonID" />
+                        SelectedValue="{Binding MijnSelectedGebruiker.AccountID, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                        SelectedValuePath="AccountID" />
                     <Button Command="{Binding OpenAccountCommand}" Style="{StaticResource OpenUCButton}" />
                 </StackPanel>
 
@@ -171,11 +172,11 @@
                         Margin="0,0,4,0"
                         VerticalAlignment="Center"
                         DataContext="{Binding Source={StaticResource VML}, Path=CollectiesViewModel}"
+                        DisplayMemberPath="ToDoCollectie"
                         ItemsSource="{Binding MijnCollectie}"
                         SelectedValue="{Binding DataContext.MijnSelectedItem.TodoCollectieID, RelativeSource={RelativeSource AncestorType=UserControl}, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}"
-                        SelectedValuePath="ToDoCollectieID"
-                        DisplayMemberPath="ToDoCollectie" />
-    
+                        SelectedValuePath="ToDoCollectieID" />
+
                     <Button Command="{Binding OpenCollectiesCommand}" Style="{StaticResource OpenUCButton}" />
 
                 </StackPanel>
