Email todo item, versturen na save NOK

--- a/HomeManager/View/ToDo/ucTodoPopup.xaml
+++ b/HomeManager/View/ToDo/ucTodoPopup.xaml
@@ -106,6 +106,7 @@
                     Content="Detail"
                     FontSize="12" />
                 <TextBox
+                    Name="Detailtxtb"
                     Grid.Row="2"
                     Grid.Column="3"
                     Height="80"
