--- a/HomeManager/View/Personen/ucNotities.xaml
+++ b/HomeManager/View/Personen/ucNotities.xaml
@@ -99,10 +99,7 @@
                     Height="250"
                     Margin="5"
                     helpers:clsRichTextBoxHelper.BindBack="True"
-                    helpers:clsRichTextBoxHelper.RtfText="{Binding MijnSelectedItem.Notitie, 
-                    Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, 
-                    ValidatesOnDataErrors=True, NotifyOnValidationError=true, 
-                    ValidatesOnExceptions=True}" />
+                    helpers:clsRichTextBoxHelper.RtfText="{Binding MijnSelectedItem.Notitie, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True, NotifyOnValidationError=true, ValidatesOnExceptions=True}" />
 
                 <!--  Werkbalk  -->
                 <StackPanel
