custom werkbalk for todo

--- a/HomeManager/View/ToDo/ucTodo.xaml
+++ b/HomeManager/View/ToDo/ucTodo.xaml
@@ -56,7 +56,7 @@
                         Foreground="White"
                         Text="To Do" />
                 </StackPanel>
-                <uc:ucWerkBalk HorizontalAlignment="Right" VerticalAlignment="Top" />
+                <uc:ucWerkBalkTodo HorizontalAlignment="Right" VerticalAlignment="Top" />
             </Grid>
         </Border>
 
