--- a/HomeManager/View/ucTitlePerson.xaml
+++ b/HomeManager/View/ucTitlePerson.xaml
@@ -29,7 +29,10 @@
                         Command="{Binding cmdAfmelden}"
                         CommandParameter="{Binding PlacementTarget, RelativeSource={RelativeSource AncestorType=ContextMenu}}"
                         Header="Afmelden" />
-                    <MenuItem Command="{Binding cmdProfiel}" Header="Mijn Info" />
+                    <MenuItem
+                        Command="{Binding cmdProfiel}"
+                        CommandParameter="{Binding}"
+                        Header="Mijn Info" />
                     <MenuItem
                         Command="{Binding cmdUnLockUser}"
                         CommandParameter="{Binding}"
