--- a/HomeManager/View/Security/ucRoles.xaml
+++ b/HomeManager/View/Security/ucRoles.xaml
@@ -105,6 +105,12 @@
 
                 <ScrollViewer Grid.Row="2" Grid.Column="3">
                     <TreeView ItemsSource="{Binding MijnRechtenCatogorieCollectie}">
+                        <TreeView.Resources>
+                            <SolidColorBrush x:Key="{x:Static SystemColors.HighlightBrushKey}" Color="#FFDDEEFF" />
+                            <SolidColorBrush x:Key="{x:Static SystemColors.ControlBrushKey}" Color="Transparent" />
+                            <SolidColorBrush x:Key="{x:Static SystemColors.HighlightTextBrushKey}" Color="Black" />
+                        </TreeView.Resources>
+
                         <TreeView.ItemTemplate>
                             <HierarchicalDataTemplate ItemsSource="{Binding Rechten}">
                                 <StackPanel Orientation="Horizontal">
@@ -115,7 +121,19 @@
                                             </i:EventTrigger>
                                         </i:Interaction.Triggers>
                                     </CheckBox>
-                                    <TextBlock Text="{Binding CatogorieNaam}" />
+                                    <TextBlock Text="{Binding CatogorieNaam}">
+                                        <TextBlock.Style>
+                                            <Style TargetType="TextBlock">
+                                                <Setter Property="Foreground" Value="Black" />
+                                                <Style.Triggers>
+                                                    <DataTrigger Binding="{Binding RelativeSource={RelativeSource AncestorType=TreeViewItem}, Path=IsSelected}" Value="True">
+                                                        <Setter Property="Foreground" Value="DarkBlue" />
+                                                    </DataTrigger>
+                                                </Style.Triggers>
+                                            </Style>
+                                        </TextBlock.Style>
+                                    </TextBlock>
+
                                 </StackPanel>
                                 <HierarchicalDataTemplate.ItemTemplate>
                                     <DataTemplate>
@@ -127,7 +145,19 @@
                                                     </i:EventTrigger>
                                                 </i:Interaction.Triggers>
                                             </CheckBox>
-                                            <TextBlock Text="{Binding RechtenName}" />
+                                            <TextBlock Text="{Binding RechtenName}">
+                                                <TextBlock.Style>
+                                                    <Style TargetType="TextBlock">
+                                                        <Setter Property="Foreground" Value="Black" />
+                                                        <Style.Triggers>
+                                                            <DataTrigger Binding="{Binding RelativeSource={RelativeSource AncestorType=TreeViewItem}, Path=IsSelected}" Value="True">
+                                                                <Setter Property="Foreground" Value="DarkBlue" />
+                                                            </DataTrigger>
+                                                        </Style.Triggers>
+                                                    </Style>
+                                                </TextBlock.Style>
+                                            </TextBlock>
+
                                         </StackPanel>
 
                                     </DataTemplate>
